--- a/index.html
+++ b/index.html
@@ -3,131 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Uday Prakash | Portfolio</title>
+    <title>Uday Prakash | GLAU '25</title>
     <style>
-        :root {
-            --primary-color: #00ff41;
-            --bg-color: #0a0a0a;
-            --text-light: #ccc;
-            --section-border: #222;
-        }
-        body {
-            background: var(--bg-color);
-            color: var(--primary-color);
-            font-family: 'Courier New', monospace;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0 20px;
-        }
-        .container {
-            max-width: 900px;
-            margin: 0 auto;
-            padding: 30px 0;
-        }
-        header {
-            border-bottom: 2px solid var(--primary-color);
-            padding-bottom: 15px;
-            margin-bottom: 30px;
-        }
-        a {
-            color: var(--primary-color);
-            text-decoration: none;
-        }
-        a:hover {
-            background: var(--primary-color);
-            color: var(--bg-color);
-        }
-        h1, h2 {
-            margin: 0;
-        }
-        h2 {
-            font-size: 1.2rem;
-            text-transform: uppercase;
-            border-left: 4px solid var(--primary-color);
-            padding-left: 10px;
-            margin-top: 30px;
-            margin-bottom: 15px;
-        }
-        section {
-            margin-bottom: 35px;
-        }
-        .project-card {
-            background: #0d0d0d;
-            border: 1px solid var(--section-border);
-            border-radius: 4px;
-            padding: 15px;
-            margin-bottom: 15px;
-        }
-        .tag {
-            display: inline-block;
-            background: #1a1a1a;
-            color: #fff;
-            padding: 3px 8px;
-            margin-right: 6px;
-            font-size: 0.75rem;
-            border: 1px solid #444;
-            border-radius: 4px;
-        }
-        .content p {
-            margin: 5px 0;
-        }
+        :root { --green: #00ff41; --bg: #0a0a0a; }
+        body { background: var(--bg); color: var(--green); font-family: 'Courier New', monospace; padding: 20px; line-height: 1.6; }
+        .container { max-width: 850px; margin: 0 auto; border: 1px solid #333; padding: 30px; }
+        .header { border-bottom: 2px solid var(--green); margin-bottom: 25px; padding-bottom: 10px; }
+        .cmd { color: #fff; margin-right: 10px; }
+        .section { margin-bottom: 35px; }
+        h2 { font-size: 1.1rem; text-transform: uppercase; border-left: 4px solid var(--green); padding-left: 10px; margin-bottom: 15px; }
+        .content { color: #ccc; margin-left: 20px; }
+        .project-card { border: 1px solid #222; padding: 15px; margin-bottom: 15px; background: #0d0d0d; border-radius: 4px; }
+        a { color: var(--green); text-decoration: none; font-weight: bold; }
+        a:hover { background: var(--green); color: var(--bg); }
+        .tag { display: inline-block; background: #1a1a1a; padding: 2px 8px; border-radius: 3px; font-size: 0.75rem; color: #fff; border: 1px solid #444; margin-right: 5px; }
     </style>
 </head>
 <body>
     <div class="container">
-        <header>
-            <h1>Uday Prakash</h1>
-            <p>GLA University, B.Tech in Computer Science (Class of 2025)</p>
-            <p>Email: <a href="mailto:puday8994@gmail.com">puday8994@gmail.com</a></p>
-        </header>
+        <div class="header">
+            <h1>UDAY_PRAKASH_CONSOLE_V1.2</h1>
+            <p><span class="cmd">INSTITUTION:</span> GLA University, Mathura</p>
+            <p><span class="cmd">CREDENTIALS:</span> B.Tech CSE (2025) | CPI: 7.26</p>
+            <p><span class="cmd">CONTACT:</span> <a href="mailto:puday8994@gmail.com">puday8994@gmail.com</a></p>
+        </div>
 
-        <section>
-            <h2>Technical Skills</h2>
+        <div class="section">
+            <h2>01. TECHNICAL_INVENTORY</h2>
             <div class="content">
-                <p><strong>Languages:</strong> Python, C, JavaScript</p>
-                <p><strong>Web:</strong> HTML5, CSS3, JavaScript, Deployment via GitHub Pages</p>
-                <p><strong>Tools & OS:</strong> Linux, Windows, Git, GitHub</p>
+                <p><span class="cmd">></span> Language: Python (Data Processing), C, Java</p>
+                <p><span class="cmd">></span> Web: HTML5, CSS3, JavaScript (Deployment via GitHub Pages)</p>
+                <p><span class="cmd">></span> OS: Linux Terminal Operations, Windows Administration</p>
             </div>
-        </section>
+        </div>
 
-        <section>
-            <h2>Projects</h2>
+        <div class="section">
+            <h2>02. PROJECT_LOGS</h2>
             <div class="content">
+                <div class="project-card">
+                    <p><strong>DIABETES_PREDICTION_ENGINE</strong></p>
+                    <p>Implemented a diagnostic prediction model using Python. Focused on data preprocessing and feature analysis to identify health risks based on medical datasets.</p>
+                    <span class="tag">Python</span> <span class="tag">Machine Learning</span> <span class="tag">Data Logic</span>
+                </div>
 
-                <article class="project-card">
-                    <p><strong>Diabetes Prediction System</strong></p>
-                    <p>A prediction engine using Python, focusing on data preprocessing, feature selection, and model evaluation to assess diabetes risk.</p>
-                    <span class="tag">Python</span>
-                    <span class="tag">Machine Learning</span>
-                    <a href="https://github.com/uday56p/DiabetesPredictionSystem1">Source</a>
-                </article>
+                <div class="project-card">
+                    <p><strong>B.TECH_CAPSTONE_PROJECT (GLAU)</strong></p>
+                    <p>Final year research and development focused on [Enter Title Here]. Applied software engineering principles to solve complex logic problems.</p>
+                    <span class="tag">Academic</span> <span class="tag">Full-Stack</span>
+                </div>
 
-                <article class="project-card">
-                    <p><strong>Strength Training Dashboard</strong></p>
-                    <p>Personal fitness project with structured HTML content providing workout routines and tracking logic.</p>
-                    <span class="tag">HTML</span>
-                    <span class="tag">Web UI</span>
-                    <a href="https://github.com/uday56p/strength-training">Source</a>
-                </article>
-
-                <article class="project-card">
-                    <p><strong>Mini Project</strong></p>
-                    <p>JavaScript based mini project demonstrating core language logic and simple interaction.</p>
-                    <span class="tag">JavaScript</span>
-                    <a href="https://github.com/uday56p/mini-project">Source</a>
-                </article>
-
+                <div class="project-card">
+                    <p><strong>MINI_CORE_PROJECT</strong></p>
+                    <p>A functional implementation showcasing basic programming logic and UI/UX fundamentals.</p>
+                    <span class="tag">Mini-Project</span> <span class="tag">Logic Flow</span>
+                </div>
             </div>
-        </section>
+        </div>
 
-        <section>
-            <h2>GitHub & Code</h2>
+        <div class="section">
+            <h2>03. REPOSITORY_LINK</h2>
             <div class="content">
-                <p>Access all code and repositories at:</p>
-                <p><a href="https://github.com/uday56p">github.com/uday56p</a></p>
+                <p>Full project source code available for review at:</p>
+                <p><span class="cmd">></span> <a href="https://github.com/uday56p">github.com/uday56p</a></p>
             </div>
-        </section>
-
+        </div>
     </div>
 </body>
 </html>
