Refactor portfolio layout and content
Updated project and certification sections with new content and improved styling.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ h2 {
     margin: 6px 0;
 }
 
-.project {
+.card {
     background: var(--surface);
     border: 1px solid var(--border);
     padding: 16px;
@@ -81,17 +81,17 @@ h2 {
     margin-bottom: 15px;
 }
 
-.project-title {
+.card-title {
     color: var(--heading);
     font-weight: 600;
     margin-bottom: 6px;
 }
 
-.project-desc {
+.card-desc {
     color: var(--text);
 }
 
-.project-meta {
+.card-meta {
     margin-top: 8px;
     font-size: 0.85rem;
     color: var(--muted);
@@ -116,7 +116,7 @@ footer {
     </div>
     <div class="contact">
         Email: <a href="mailto:puday8994@gmail.com">puday8994@gmail.com</a><br>
-        GitHub: <a href="https://github.com/uday56p">github.com/uday56p</a>
+        Portfolio: <a href="https://uday56p.github.io/portfolio_uday">https://uday56p.github.io/portfolio_uday</a>
     </div>
 </header>
 
@@ -132,37 +132,37 @@ footer {
 <section>
 <h2>Projects</h2>
 
-<div class="project">
-    <div class="project-title">Diabetes Prediction System</div>
-    <div class="project-desc">
-        Implemented a basic machine learning workflow in Python to explore diabetes risk prediction.
-        Focused on understanding data preprocessing, feature handling, and evaluating model output.
+<div class="card">
+    <div class="card-title">Diabetes Prediction System</div>
+    <div class="card-desc">
+        Implemented a basic machine learning workflow in Python to explore diabetes risk prediction
+        using structured medical data. Focused on preprocessing, feature handling, and evaluation.
     </div>
-    <div class="project-meta">
+    <div class="card-meta">
         Python · Introductory Machine Learning ·
         <a href="https://github.com/uday56p/DiabetesPredictionSystem1">Source Code</a>
     </div>
 </div>
 
-<div class="project">
-    <div class="project-title">Strength Training Dashboard</div>
-    <div class="project-desc">
+<div class="card">
+    <div class="card-title">Strength Training Dashboard</div>
+    <div class="card-desc">
         Created a static web interface using HTML and CSS to organize workout routines
         with emphasis on structure and readability.
     </div>
-    <div class="project-meta">
+    <div class="card-meta">
         HTML · CSS ·
         <a href="https://github.com/uday56p/strength-training">Source Code</a>
     </div>
 </div>
 
-<div class="project">
-    <div class="project-title">Mini JavaScript Project</div>
-    <div class="project-desc">
-        Small JavaScript project built to practice core language concepts such as logic flow,
-        event handling, and basic DOM interaction.
+<div class="card">
+    <div class="card-title">Mini JavaScript Project</div>
+    <div class="card-desc">
+        Small JavaScript project built to practice logic flow, event handling,
+        and basic DOM interaction.
     </div>
-    <div class="project-meta">
+    <div class="card-meta">
         JavaScript ·
         <a href="https://github.com/uday56p/mini-project">Source Code</a>
     </div>
@@ -170,12 +170,51 @@ footer {
 
 </section>
 
+<section>
+<h2>Certifications & Training</h2>
+
+<div class="card">
+    <div class="card-title">NPTEL – Ethics in Engineering Practice</div>
+    <div class="card-desc">
+        Elite certification (Top 2%) awarded through NPTEL.
+        Demonstrated consistent performance across a structured engineering ethics curriculum.
+    </div>
+    <div class="card-meta">
+        IIT Kharagpur · NPTEL · 2022
+    </div>
+</div>
+
+<div class="card">
+    <div class="card-title">NPTEL – Introduction to Environmental Economics</div>
+    <div class="card-desc">
+        Topper / Elite performer in a 12-week NPTEL course focusing on analytical
+        reasoning and applied economic concepts.
+    </div>
+    <div class="card-meta">
+        IIT Roorkee · NPTEL · 2023
+    </div>
+</div>
+
+<div class="card">
+    <div class="card-title">Full Stack Web Development (Value Added Course)</div>
+    <div class="card-desc">
+        Completed a structured value-added program conducted by GLA University
+        in collaboration with Coding Blocks, covering core web development fundamentals.
+    </div>
+    <div class="card-meta">
+        GLA University · Coding Blocks · 2023
+    </div>
+</div>
+
+</section>
+
 <footer>
-    This portfolio intentionally reflects a minimal and honest representation of current skills.
+    This portfolio intentionally reflects a minimal and honest representation of current skills and training.
 </footer>
 
 </div>
 </body>
 </html>
+
 
 
