Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ h1 {
 
 .contact {
     margin-top: 8px;
+    color: var(--muted);
 }
 
 a {
@@ -115,8 +116,7 @@ footer {
         GLA University — B.Tech Computer Science (2025)
     </div>
     <div class="contact">
-        Email: <a href="mailto:puday8994@gmail.com">puday8994@gmail.com</a><br>
-        Portfolio: <a href="https://uday56p.github.io/portfolio_uday">https://uday56p.github.io/portfolio_uday</a>
+        Email: <a href="mailto:puday8994@gmail.com">puday8994@gmail.com</a>
     </div>
 </header>
 
@@ -139,8 +139,7 @@ footer {
         using structured medical data. Focused on preprocessing, feature handling, and evaluation.
     </div>
     <div class="card-meta">
-        Python · Introductory Machine Learning ·
-        <a href="https://github.com/uday56p/DiabetesPredictionSystem1">Source Code</a>
+        Python · Introductory Machine Learning
     </div>
 </div>
 
@@ -151,8 +150,7 @@ footer {
         with emphasis on structure and readability.
     </div>
     <div class="card-meta">
-        HTML · CSS ·
-        <a href="https://github.com/uday56p/strength-training">Source Code</a>
+        HTML · CSS
     </div>
 </div>
 
@@ -163,8 +161,7 @@ footer {
         and basic DOM interaction.
     </div>
     <div class="card-meta">
-        JavaScript ·
-        <a href="https://github.com/uday56p/mini-project">Source Code</a>
+        JavaScript
     </div>
 </div>
 
@@ -176,30 +173,30 @@ footer {
 <div class="card">
     <div class="card-title">NPTEL – Ethics in Engineering Practice</div>
     <div class="card-desc">
-        Elite certification (Top 2%) awarded through NPTEL.
-        Demonstrated consistent performance across a structured engineering ethics curriculum.
+        Elite certification (Top 2%) awarded through NPTEL,
+        reflecting consistent performance in a structured engineering ethics course.
     </div>
     <div class="card-meta">
-        IIT Kharagpur · NPTEL · 2022
+        IIT Kharagpur · 2022
     </div>
 </div>
 
 <div class="card">
     <div class="card-title">NPTEL – Introduction to Environmental Economics</div>
     <div class="card-desc">
-        Topper / Elite performer in a 12-week NPTEL course focusing on analytical
-        reasoning and applied economic concepts.
+        Topper / Elite performer in a 12-week NPTEL course
+        emphasizing analytical reasoning and applied concepts.
     </div>
     <div class="card-meta">
-        IIT Roorkee · NPTEL · 2023
+        IIT Roorkee · 2023
     </div>
 </div>
 
 <div class="card">
     <div class="card-title">Full Stack Web Development (Value Added Course)</div>
     <div class="card-desc">
-        Completed a structured value-added program conducted by GLA University
-        in collaboration with Coding Blocks, covering core web development fundamentals.
+        Completed a value-added program conducted by GLA University
+        in collaboration with Coding Blocks, covering web development fundamentals.
     </div>
     <div class="card-meta">
         GLA University · Coding Blocks · 2023
@@ -209,7 +206,7 @@ footer {
 </section>
 
 <footer>
-    This portfolio intentionally reflects a minimal and honest representation of current skills and training.
+    This portfolio reflects a focused and honest snapshot of current skills and academic training.
 </footer>
 
 </div>
